--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
         <p>STAY CONNECTED</p>
         <span>ashrafulmijan5@gmail.com</span>
         <div class="footer-icon">
-            <i><img src="images/image 6.png" alt=""></i>
-            <i><img src="images/Group 33059.png" alt=""></i>
-            <i><img src="images/image 7.png" alt=""></i>
+            <i><a href="#"><img src="images/image 6.png" alt=""></a></i>
+            <i><a href="#"><img src="images/Group 33059.png" alt=""></a></i>
+            <i><a href="#"><img src="images/image 7.png" alt=""></a></i>
         </div>
     </footer>
 </body>
